started a very basic ui